# scurl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
cf/: .gitignore  package-lock.json  package.json  tsconfig.json  wrangler.toml
cf/container/: .gitignore  Dockerfile  inline_model.py  server.py
cf/public/: app.js  index.html  styles.css
cf/src/: container.ts  index.ts  ratelimit.ts
docs/: algorithm.md  benchmarks.md  prompt-injection-primer.md
scripts/: generate_multilingual_dataset.py  train_classifier.py
site/: eleventy.config.js  package-lock.json  package.json
site/src/: CNAME  index.njk
site/src/_data/: site.js
site/src/_includes/layouts/: base.njk  doc.njk
site/src/docs/: algorithm.md  benchmarks.md  primer.md
site/src/styles/: main.css  prism-dark.css
src/scurl/: __init__.py  browser.py  cli.py  curl.py  middleware.py  request_middleware.py  response_middleware.py  sanitize.py
src/scurl/prompt_defender/: __init__.py  classifier.py  config.py  embedder.py  middleware.py  motifs.py  normalizer.py  patterns.py  windowing.py
src/scurl/prompt_defender/models/: prompt_injection_rf.pkl
src/scurl/prompt_defender/pattern_data/: __init__.py
src/scurl/prompt_defender/pattern_data/_defaults/: ar.yaml  de.yaml  en.yaml  es.yaml  fr.yaml  hi.yaml  it.yaml  ja.yaml  ko.yaml  nl.yaml  pt.yaml  ru.yaml  zh.yaml
tests/: __init__.py  test_cli.py  test_curl.py  test_middleware.py  test_motifs.py  test_multilingual.py  test_prompt_defender.py  test_response_middleware.py  test_secret_defender.py  test_windowing.py
