[project]
name = "sibylline-scurl"
version = "0.1.1"
description = "A secure curl wrapper with middleware support and HTML-to-markdown extraction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nathan" }]
keywords = ["curl", "web-scraping", "security", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]
dependencies = [
    "readability-lxml>=0.8.1",
    "html2text>=2024.2.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
# Headless browser for JS-rendered pages (--render flag)
browser = [
    "playwright>=1.40.0",
]
# Prompt injection detection with ML-based classification
prompt-defender = [
    "onnxruntime>=1.17.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
    "confusable-homoglyphs>=3.2.0",
    "scikit-learn>=1.3.0",
    "rapidfuzz>=3.5.0",
]
# Training the classifier (includes prompt-defender deps)
training = [
    "onnxruntime>=1.17.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
    "confusable-homoglyphs>=3.2.0",
    "scikit-learn>=1.3.0",
    "datasets>=2.14.0",
]

[project.scripts]
scurl = "scurl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scurl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
